--- a/build_pilot_release.yaml
+++ b/build_pilot_release.yaml
@@ -7,28 +7,28 @@ steps:
   id: "Touch required Kubernetes config"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
-  args: [ 'mkdir', '-p', '/gopath/src/istio.io' ]
+  args: [ 'mkdir', '-p', '/tmp/gopath/src/istio.io' ]
   id: "Setup Go workspace"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
-  args: [ 'bash', 'ln', '-s', '/workspace', '/gopath/src/istio.io/pilot' ]
+  args: [ 'ln', '-s', '/workspace', '/tmp/gopath/src/istio.io/pilot' ]
   id: "Symlink Go workspace"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
-  args: [ 'ls', '-la', '/workspace', '/gopath/src/istio.io/pilot' ]
+  args: [ 'ls', '-la', '/workspace', '/tmp/gopath/src/istio.io/pilot' ]
   id: "Inspect Go symlink"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
-  args: [ 'ls', '-lR', '/gopath' ]
+  args: [ 'ls', '-lR', '/tmp/gopath' ]
   id: "Inspect Go workspace"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
-  args: [ 'exit 1' ]
+  args: [ 'exit', '1' ]
   id: "Break"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
   args: [ './bin/upload-istioctl', '-r', '-p', "gs://$PROJECT_ID/pilot/$TAG_NAME" ]
-  env: ["GOPATH=/gopath"]
+  env: ["GOPATH=/tmp/gopath"]
   id: "Upload istioctl"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
