--- a/build_pilot_release.yaml
+++ b/build_pilot_release.yaml
@@ -15,16 +15,12 @@ steps:
   id: "Symlink Go workspace"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
-  args: [ 'ls', '-la', '/workspace', '/tmp/gopath/src/istio.io/pilot' ]
+  args: [ 'ls', '-la', '/tmp/gopath/src/istio.io/pilot' ]
   id: "Inspect Go symlink"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
   args: [ 'ls', '-lR', '/tmp/gopath' ]
   id: "Inspect Go workspace"
-
-- name: 'gcr.io/$PROJECT_ID/istio-builder'
-  args: [ 'exit', '1' ]
-  id: "Break"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
   args: [ './bin/upload-istioctl', '-r', '-p', "gs://$PROJECT_ID/pilot/$TAG_NAME" ]
