--- a/build_pilot_release.yaml
+++ b/build_pilot_release.yaml
@@ -7,7 +7,7 @@ steps:
   id: "Touch required Kubernetes config"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
-  args: [ 'bash', '-c', 'mkdir -p /tmp/gopath/src/istio.io/pilot' ]
+  args: [ 'mkdir', '-p', '/tmp/gopath/src/istio.io/pilot' ]
   id: "Setup Go workspace"
 
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
