Change dir into the GOPATH to resolve upload-istioctl failures

--- a/build_pilot_release.yaml
+++ b/build_pilot_release.yaml
@@ -11,6 +11,7 @@ steps:
     touch platform/kube/config
     mkdir -p /tmp/gopath/src/istio.io
     ln -s /workspace /tmp/gopath/src/istio.io/pilot
+    cd /tmp/gopath/src/istio.io/pilot
     ./bin/upload-istioctl -r -p gs://$PROJECT_ID/pilot/$TAG_NAME
     ./bin/push-docker -hub gcr.io/$PROJECT_ID -tag $TAG_NAME
 
