--- a/build_pilot_release.yaml
+++ b/build_pilot_release.yaml
@@ -13,7 +13,7 @@ steps:
     set -o pipefail
     set -x
     mkdir -p /tmp/gopath/src/istio.io
-    mv /workspace /tmp/gopath/src/istio.io/pilot
+    ln -s /workspace /tmp/gopath/src/istio.io/pilot
     cd /tmp/gopath/src/istio.io/pilot
     touch platform/kube/config
     ./bin/upload-istioctl -r -p gs://$PROJECT_ID/pilot/$TAG_NAME
