--- a/bin/build_pilot_release.yaml
+++ b/bin/build_pilot_release.yaml
@@ -5,6 +5,6 @@ steps:
 - name: 'gcr.io/$PROJECT_ID/istio-builder'
   entrypoint: 'bash'
   env: [ "GOPATH=/tmp/gopath" ]
-  args: [ "./bin/release.sh" ]
+  args: [ "./bin/release.sh", "-i", "$PROJECT_ID", "-t", "$TAG_NAME" ]
 
 timeout: 1800s
