--- a/bin/periodic_pilot_release.yaml
+++ b/bin/periodic_pilot_release.yaml
@@ -5,12 +5,11 @@
 
 steps:
 - name: 'gcr.io/cloud-builders/git'
-  args: [ "clone", "https://github.com/rvkubiak/pilot" ]
+  args: [ "clone", "https://github.com/rvkubiak/pilot", "." ]
 
 - name: 'gcr.io/istio-io/istio-builder'
   entrypoint: 'bash'
   env: [ "GOPATH=/tmp/gopath" ]
   args: [ "./bin/release.sh", "-v", "$_VERSION", "-h", "gcr.io/istio-builder-prototype", "-b", "istio-builder-prototype" ]
-  dir: "pilot"
 
 timeout: 1800s
